@@ -1,3 +1,8 @@
+2009-12-22  Joe English  <jenglish@users.sourceforge.net>
+
+	* library/ttk/sizegrip.tcl: Patch to avoid bizarro behavior
+	under compiz [Bug 2912356].
+
 2009-12-22  Donal K. Fellows  <dkf@users.sf.net>
 
 	* library/tkfbox.tcl (ListInvoke): [Bug 2919205]: Correct ordering of
